@startuml
class htmlFileWriter {
' Strings are data variables being used in the HTML file
-String name
-String author
' File object used to create html file
-File htmlFile
' BufferedWriter object is used to write output to the html file
-BufferedWriter out

' Constructor calls all methods of the class. Everything was specified by the user, so no need for change.
+htmlFileWriter(String name, String author, boolean hasJSFiles, boolean hasCSSFiles)
-void generateWebsiteDirectory()
-void generateJSFilesDirectory()
-void generateCSSFilesDirectory()
-void generateHTMLFile()
-void writeDataToHTMLFile()
-void closeFiles()
}

class inputReader {
' Scanner is created as System.in
-Scanner in

' Constructor initializes Scanner
+inputReader()
+String askUserForName()
+String askUserForAuthor()
+boolean askIfUserWantsJSFiles()
+boolean askIfUserWantsCSSFiles()
+void closeFiles()
}

class Solution43 {
+void main(String[] args)
}

inputReader -- Solution43
htmlFileWriter -- Solution43
@enduml